--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
-  "dependencies": {
-    "express": "^4.17.1"
+  "private": true,
+  "scripts": {
+    "start": "ts-node-transpile-only ."
   },
-  "private": true
+  "dependencies": {
+    "express": "^4.17.1",
+    "ts-node": "^9.1.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/node": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.0.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "typescript": "^3.8.3"
+  }
 }
